Repositories to services

--- a/ChampionshipManager/ChampionshipManager.Web/Pages/CreateChampionship.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/CreateChampionship.razor
@@ -54,7 +54,7 @@ Create new championship
         _championship.Competitors = new List<Competitor>();
         _championship.Tournaments = new List<Tournament>();
         
-        Selected.AddRange(Organizer.Competitors);
+        NoSelected.AddRange(Organizer.Competitors);
     }
 
     private void HandleValidSubmit()
