--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Championships.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Championships.razor
@@ -28,7 +28,7 @@
     protected override async Task OnInitializedAsync()
     {
         var user = (await AuthenticationStateProvider.GetAuthenticationStateAsync()).User;
-        Organizer = OrganizerRepository.Filter(organizer => organizer.Name == user.Identity.Name).Single();
+        Organizer = OrganizerRepository.FilterWithIncludes(organizer => organizer.Name == user.Identity.Name).Single();
     }
 
 }
