Context Provider + services

--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Championships/CreateChampionship.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Championships/CreateChampionship.razor
@@ -1,8 +1,8 @@
 @page "/CreateChampionship"
 @using ChampionshipManager.Db.Models
-@using ChampionshipManager.Db.Repository
 @using ChampionshipManager.BusinessLayer.Services
 @using ChampionshipManager.Web.Utils
+@using ChampionshipManager.Web.Pages.Components
 
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject NavigationManager NavigationManager
