--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Tournaments/CreateTournament.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Tournaments/CreateTournament.razor
@@ -1,15 +1,16 @@
 @page "/CreateTournament/{ChampionshipId}"
 @using ChampionshipManager.Db.Models
-@using ChampionshipManager.Db.Repository
+
+@using ChampionshipManager.Web.Pages.Components
+@using ChampionshipManager.BusinessLayer.Services
 
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject NavigationManager NavigationManager
 
-@inject CompetitorRepository CompetitorRepository
-@inject TournamentRepository TournamentRepository
-@inject OrganizerRepository OrganizerRepository
+@inject ChampionshipService ChampionshipService
+@inject TournamentService TournamentService
 
-Create new championship
+Create new tournament
 
 <EditForm Model="@_tournament" OnValidSubmit="HandleValidSubmit">
     <DataAnnotationsValidator/>
@@ -23,24 +24,7 @@ Create new championship
         }
     </InputSelect>
 
-    <div class="multiple-selector">
-        <ul class="selectable-ul">
-            @foreach (var item in NoSelected)
-            {
-                <li @onclick="@(() => Select(item))">@item.Name</li>
-            }
-        </ul>
-        <div class="multiple-selector-buttons">
-            <button type="button" @onclick="SelectAll">>></button>
-            <button type="button" @onclick="DeselectAll">@removeAllText</button>
-        </div>
-        <ul class="selectable-ul">
-            @foreach (var item in Selected)
-            {
-                <li @onclick="@(() => Deselect(item))">@item.Name</li>
-            }
-        </ul>
-    </div>
+    <SelectMultipleCompetitorsComponent Selected="@Selected" ></SelectMultipleCompetitorsComponent>
 
     <button type="submit">Submit</button>
 </EditForm>
@@ -50,24 +34,21 @@ Create new championship
 
     [Parameter]
     public string ChampionshipId { get; set; }
+    
+    public List<Competitor> Selected { get; set; } = new List<Competitor>();
 
-    private Organizer Organizer { get; set; }
     private readonly Tournament _tournament = new Tournament();
 
     protected override async Task OnInitializedAsync()
     {
-        var user = (await AuthenticationStateProvider.GetAuthenticationStateAsync()).User;
-        Organizer = OrganizerRepository.Filter(organizer => organizer.Name == user.Identity.Name, new List<string> {nameof(Db.Models.Organizer.Skills)}).Single();
-        
-        SetupTournament();
-        
+        SetupTournamentForCreation();
     }
 
-    private void SetupTournament()
+    private void SetupTournamentForCreation()
     {
-        var championship =  Organizer.Championships.Single(c => c.ID.ToString() == ChampionshipId);
+        var championship = ChampionshipService.GetWithCompetitors(ChampionshipId);
         
-        NoSelected.AddRange(championship.Competitors);
+        Selected.AddRange(championship.Competitors);
         _tournament.Championship = championship;
         _tournament.Competitors = new List<Competitor>();
         _tournament.Games = new List<Game>();
@@ -77,37 +58,8 @@ Create new championship
     private void HandleValidSubmit()
     {
         _tournament.Competitors = Selected;
-        var id = TournamentRepository.Create(_tournament);
+        var id = TournamentService.Create(_tournament);
         NavigationManager.NavigateTo($"Tournament/{ChampionshipId}/{id.ToString()}");
-    }
-
-    private string removeAllText = "<<";
-
-    public List<Competitor> NoSelected { get; set; } = new List<Competitor>();
-    public List<Competitor> Selected { get; set; } = new List<Competitor>();
-
-    private void Select(Competitor item)
-    {
-        NoSelected.Remove(item);
-        Selected.Add(item);
-    }
-
-    private void Deselect(Competitor item)
-    {
-        Selected.Remove(item);
-        NoSelected.Add(item);
-    }
-
-    private void SelectAll()
-    {
-        Selected.AddRange(NoSelected);
-        NoSelected.Clear();
-    }
-
-    private void DeselectAll()
-    {
-        NoSelected.AddRange(Selected);
-        Selected.Clear();
     }
 
 }
