--- a/ChampionshipManager/ChampionshipManager.Web/Shared/NavMenu.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Shared/NavMenu.razor
@@ -19,12 +19,7 @@
                 </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="competitors">
-                <span class="oi oi-people" aria-hidden="true"></span> Competitors
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="skills">
-                <span class="oi oi-fire" aria-hidden="true"></span> Skills
+                <span class="oi oi-people" aria-hidden="true"></span> All Competitors
             </NavLink>
         </li>
         <li class="nav-item px-3">
