--- a/ChampionshipManager/ChampionshipManager.Web/wwwroot/css/site.css
+++ b/ChampionshipManager/ChampionshipManager.Web/wwwroot/css/site.css
@@ -181,3 +181,26 @@ app {
         display: block;
     }
 }
+
+/* Create two equal columns that floats next to each other */
+.responsiveColumn {
+    box-sizing: border-box;
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 300px; /* Should be removed. Only for demonstration */
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .responsiveColumn {
+        width: 100%;
+    }
+}
