--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Competitors/Competitors.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Competitors/Competitors.razor
@@ -7,30 +7,34 @@
 
 <AuthorizeView>
     <Authorized>
-        <CreateCompetitor Refresh="@StateHasChanged"/>
-        
-        <br/>
-        <br/>
-        Competitors: <br/>
-        @foreach (var competitor in _organizer.Competitors)
-        {
-            <br/>
-            @competitor.Name
-            <br/>
-            
-            @if (_organizer.BirthEnabled)
-            {
-                <div style="padding-left: 5em">@competitor.BirthDate</div>
-            }
-            @if (_organizer.GenderEnabled)
-            {
-                <div style="padding-left: 5em">@competitor.Gender</div>
-            }
-            @if (_organizer.SkillsEnabled)
-            {
-                <div style="padding-left: 5em">@competitor.Skill.Name</div>
-            }
-        }
+
+        <div class="row">
+            <div class="column">
+                <CreateCompetitor Refresh="@StateHasChanged"/>
+            </div>
+            <div class="column">
+                Competitors: <br/>
+                @foreach (var competitor in _organizer.Competitors)
+                {
+                    <br/>
+                    @competitor.Name
+                    <br/>
+
+                    @if (_organizer.BirthEnabled)
+                    {
+                        <div style="padding-left: 5em">@competitor.BirthDate</div>
+                    }
+                    @if (_organizer.GenderEnabled)
+                    {
+                        <div style="padding-left: 5em">@competitor.Gender</div>
+                    }
+                    @if (_organizer.SkillsEnabled)
+                    {
+                        <div style="padding-left: 5em">@competitor.Skill.Name</div>
+                    }
+                }
+            </div>
+        </div>
     </Authorized>
 
 
