--- a/ChampionshipManager/ChampionshipManager.Web/wwwroot/css/site.css
+++ b/ChampionshipManager/ChampionshipManager.Web/wwwroot/css/site.css
@@ -187,7 +187,13 @@ app {
     box-sizing: border-box;
     float: left;
     width: 50%;
+    height: 100vh;
     padding: 10px;
+}
+
+.responsiveColumn.second{
+    color: #d7d7d7;
+    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
 }
 
 /* Clear floats after the columns */
